--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/aos": "^3.0.7",
     "aos": "^3.0.0-beta.6",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
